--- a/test.yaml
+++ b/test.yaml
@@ -8,10 +8,10 @@ paths:
       responses:
         200:
           description: OK
-          content:  # Response body
-            application/json:  # Media type
-              schema:          # Must-have
-                type: object   # Data type
+          content:
+            application/json:
+              schema:
+                type: object
                 properties: 
                   id:
                     type: integer
@@ -19,7 +19,7 @@ paths:
                     type: string
                   fullTime: 
                     type: boolean
-                example:       # Sample data
+                example:
                     id: 1
                     name: Jessica Right
                     fullTime: true
